--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#d6d7d7"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,11 +15,10 @@
         android:padding="5dp">
 
         <LinearLayout
-            android:layout_width="279dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:background="#d6d7d7"
-            android:padding="5dp">
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/new_btn"
@@ -39,25 +36,31 @@
                 android:src="@drawable/save" />
 
             <ImageButton
-                android:id="@+id/head_btn"
+                android:id="@+id/undo_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/head"
-                android:src="@drawable/heads" />
+                android:contentDescription="@string/save"
+                android:src="@drawable/undo" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#d6d7d7">
+                android:background="#d6d7d7"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/head_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/head"
+                    android:src="@drawable/heads" />
 
                 <ImageButton
                     android:id="@+id/brush_size_btn"
@@ -104,8 +107,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:gravity="center"
         android:background="#d6d7d7"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageButton
